# SmartHire

./: .gitignore  compose.yaml  services_schemas_in_one.py
.pfenv/: pyvenv.cfg
.pfenv/Scripts/: activate  activate.bat  make_rfc822.py
app/: .env  Dockerfile  additions.txt  alembic.ini  pyproject.toml
app/app/: init_db.py  main.py  test_pre_start.py
app/app/api/: deps.py
app/app/api/v1/: connect_api.py
app/app/api/v1/Routes/: institue.py
app/app/core/: db_settings.py  loggerConfig.py  security.py  settings.py  utils.py
app/app/crud/: institute_crud.py
app/app/models/: ApplicationModel.py  BaseModel.py  FeedbackModel.py  Institute_model.py  JobopeningModel.py  TeaUniLink.py  TeacherModel.py  interview.py  likecommentModel.py
app/migrations/: env.py
app/migrations/versions/: ab23fbe20370_changes_to_the_table_institute_model_.py
emailService/: Dockerfile  pyproject.toml
emailService/app/: main.py
feedService/: .env  Dockerfile  README.md  pyproject.toml
feedService/app/: main.py
feed_service/: pyproject.toml
feed_service/app/: main.py
job_posting_service/: .env  pyproject.toml
job_posting_service/app/: main.py
likeComment_service/: .env  Dockerfile  pyproject.toml
likeComment_service/alembic/: env.py
notification_service/: pyproject.toml
post_service/: README.md  pyproject.toml
profile_management_service/: .env  Dockerfile  pyproject.toml
quizengine/: .env  addition.txt  alembic.ini  pyproject.toml
u_profile_management_service/: pyproject.toml
uni_profile_management_service/: .env  pyproject.toml
(+146 files in other folders)
